0.0.47
========================

- fixed unhandled error until destroying WebSocket
- added missing properties into the `UIStreamMessage`
- fixed parsing dates (lower than 1.1.1970) in the schemas
- fixed applying `filter` argument in the `BACKUP()` method
- improved bundle generator in the `$ total4` executable
- changed arguments position in the `controller.stream()` method

========================
0.0.46
========================

- added `FILESTORAGE().backup(filename, callback)` method
- added `FILESTORAGE().restore(filename, callback)` method
- added `FILESTORAGE().stream(callback(file, next), [done])` for streaming of meta information for each file
- added `FILESTORAGE().move(id, newid, callback)` method
- added `MEMORIZE()` creates a simple and persistent storage
- improved `FAKE({ id: UID, name: 'string(30)' })` method by adding a support for inline schemas
- added a writing locks to the TextDB engine
- improved performance for `Array.wait()` + added canceling of processing (more in documentation)
- improved performance for `Array.async()` + added canceling of processing (more in documentation)
- fixed `protocol` parser for WebSocket routes
- fixed CSS variables
- added `schema.undefine(name)` for removing of defined field in the schema
- added `options.servicemode` to the start script for running Total.js app without HTTP server
- fixed error status codes
- fixed default root [#24](https://github.com/totaljs/framework4/issues/24)
- fixed JavaScript compressor [#25](https://github.com/totaljs/framework4/issues/25)
- added `flowstream.pause(is)` method
- added `flowstream.paused {Boolean}` property
- added `flowstream_component.pause = function(is) {}` delegate
- fixed saving files in `FILESTORAGE()` in OS Windows
- fixed sending nullable data in the FlowStream
- fixed handling messages in the form `instance.message_<INPUT_NAME>` in the FlowStream
- fixed using `require()` in the components in the FlowStream